<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/CkWithUii_Kill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ckWithUii"
                android:textColor="@drawable/check_text_color2" />

            <Button
                android:id="@+id/BtUii_Kill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/btUii"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/white"
                android:background="@drawable/button_bg_gray"
                android:visibility="visible"
                android:layout_marginRight="5dp" />
        </RelativeLayout>
        
        <View android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:background="@color/gray1"
	        android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvTagUii_Write"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/EtTagUii_Write"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAccessPwd"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/EtAccessPwd_Kill"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rfid_mgs_killpwdtip"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/btnKill"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/uhf_msg_tab_kill"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>